--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" /> -->
     <link rel="stylesheet" href="./dist/css/bootstrap.css" />
     <link rel="stylesheet" href="./dist/css/main.css" />
-    <link rel="stylesheet" href="./dist/css/pages/home.css" />
+    <link rel="stylesheet" href="./dist/css/pages/about.css" />
   </head>
 
   <body data-barba="wrapper">
@@ -21,16 +21,16 @@
   between your pages, like <header> or <nav> -->
 
     <div class="curtain"></div>
-    <main data-barba="container" data-barba-namespace="home">
+    <main data-barba="container" data-barba-namespace="about">
       <!-- put here the content you wish to change
     between your pages, like your main content <h1> or <p> -->
       <div class="container">
-        <h1 class="display-1">Boilerplate - Home</h1>
+        <h1 class="display-1">Boilerplate - About</h1>
         <p id="demo" class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur facilis eos ad vero nemo deleniti dolore maiores modi numquam a doloribus, error perspiciatis vitae deserunt, cumque optio fuga consectetur aliquid.</p>
 
         <!-- simple Button -->
-        <a href="./about.html" class="d-block mt-5">
-          <button class="btn btn-primary">Checkout About page with barba</button>
+        <a href="./index.html" class="d-block mt-5">
+          <button class="btn btn-primary">Go back with barba</button>
         </a>
         <!-- simple Button ends here -->
       </div>
